# inventory_c

./: .gitignore  CMakeLists.txt  README.md  main.c  title_screen.c
include/: armor_menu.h  food_menu.h  inventory_menu.h  potions_menu.h  weapons_menu.h
inventory_menu/: armor_menu.c  food_menu.c  inventory_menu.c  potions_menu.c  weapons_menu.c
main_menu/: main_menu.c  main_menu.h
utils/: deleteme.c  prototype.c  utils.c  utils.h
